<resources>
    <string name="app_name">Mafia</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="club_name">Club Name</string>
    <string name="et_club_name">Club name</string>
    <string name="btn_add">Add</string>
    <string name="citizens_won">Citizens won</string>
    <string name="mafia_won">Mafia won</string>
    <string name="start_game">Start game</string>
    <string name="citizen">Citizen</string>
    <string name="don_w_l">Don w/l</string>
    <string name="start">Start</string>
    <string name="stats">Stats</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="citizen_wins">Citizen wins</string>
    <string name="citizen_loses">Citizen loses</string>
    <string name="serif_wins">Serif wins</string>
    <string name="serif_loses">Serif loses</string>
    <string name="mafia_wins">Mafia wins</string>
    <string name="mafia_loses">Mafia loses</string>
    <string name="don_wins">Don wins</string>
    <string name="don_loses">Don loses</string>
    <string name="update">Update</string>
    <string name="_1">1.</string>
    <string name="role">Role</string>
    <string name="citiz">Citiz</string>
    <string name="serif">Serif</string>
    <string name="mafia">Mafia</string>
    <string name="donnn">Donnn</string>
    <string name="nickname">nickname</string>
    <string name="delete">Delete</string>
</resources>